--- a/src/mainlayout/components/MeetOurTeam.css
+++ b/src/mainlayout/components/MeetOurTeam.css
@@ -44,7 +44,7 @@
   transition: transform 0.3s ease;
   position: relative;
   overflow: hidden;
-  height: 200px;
+  height: 340px;
 }
 
 .team-card:hover {
@@ -55,6 +55,9 @@
   display: flex;
   height: 100%;
   position: relative;
+  justify-content: flex-start;
+  align-items: start;
+  padding: 8vh 5vh ;
 }
 
 .member-info {
