--- a/src/mainlayout/components/Nav.css
+++ b/src/mainlayout/components/Nav.css
@@ -1,5 +1,6 @@
 .nav {
-  position: fixed;
+  /* position: fixed; */
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -44,7 +45,7 @@
 
 .nav-link {
   text-decoration: none;
-  color: white;
+  color: white !important;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 1rem;
